--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <p style="font-size: 1.3rem"><a href="https://beerkay.github.io/">Berkay Celik</a> (Purdue University)</p>
             <p style="font-size: 1.3rem"><a href="https://people.computing.clemson.edu/~lcheng2/">Long Cheng</a> (Clemson University)</p>
             <p style="font-size: 1.3rem"><a href="https://devjayati.github.io/">Jayati Dev</a> (Comcast, Inc.)</p>
-            <p style="font-size: 1.3rem"><a href="https://josiahdykstra.com/">Josiah Dykstra</a> (Rail of Bits)</p>
+            <p style="font-size: 1.3rem"><a href="https://josiahdykstra.com/">Josiah Dykstra</a> (Trail of Bits)</p>
             <p style="font-size: 1.3rem">Robert J. Erbes (Idaho National Laboratory)</p>
             <p style="font-size: 1.3rem"><a href="https://cse.buffalo.edu/~hongxinh/">Hongxin Hu</a> (University at Buffalo, the state university of New York)</p>
             <p style="font-size: 1.3rem"><a href="https://yanjia-nankai.github.io/">Yan Jia</a> (Nankai University)</p>
